<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_most_pop"
        android:title="@string/most_pop_label"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_highest_rated"
        android:title="@string/highest_rated_labe"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_now_playing"
        android:title="@string/now_playing_label"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_upcoming"
        android:title="@string/upcoming_label"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_favourites"
        android:title="Favorites"
        android:icon="@drawable/ic_favorite_black_24dp"
        app:showAsAction="never"/>

    <item android:id="@+id/action_search"
        android:title="Search"
        android:icon="@drawable/ic_search_black_24dp"
        app:showAsAction="always|collapseActionView"
        app:actionViewClass="android.widget.SearchView" />

</menu>